--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,4 +1,5 @@
 .contacts-conteiner {
+  padding-top: 82px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -7,23 +8,129 @@
   grid-area: 1/1/2/2;
 }
 
+.contacts__list-item {
+  font-size: 20px;
+}
+
+.contacts__list-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.contacts-kind {
+  margin-bottom: 32px;
+  font-size: 36px;
+}
+
 .persons-list {
   display: flex;
+  justify-content: center;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
   grid-area: 1/2/2/3;
 }
 
 .persons-item {
   width: 270px;
+  text-align: center;
 }
 
-.contacts-form {
+.persons-item > .persons-name {
+  margin-top: 24px;
+  margin-bottom: 11px;
+  font-size: 20px;
+}
+
+.persons-phone {
+  margin-top: 13px;
+  margin-bottom: 8px;
+}
+
+.contacts__form {
   grid-area: 2/2/3/3;
+  margin-top: 63px;
+}
+
+.contacts__form-title {
+  margin-bottom: 42px;
+  font-size: 36px;
+  font-weight: 900;
 }
 
 .partners {
+  padding-top: 82px;
   grid-area: 3/1/4/3;
+  text-align: center;
 }
 
-.partners-list {
+.partners__list {
   display: flex;
+  justify-content: center;
+  margin-top: 32px;
+}
+
+.contacts__form {
+  font-size: 20px;
+}
+
+.contacts__form-formfield {
+  margin-bottom: 35px;
+  height: 50px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.contacts__form-formfield > input, textarea {
+  width: 100%;
+  height: 100%;
+  background-color: inherit;
+  border: none;
+}
+
+.contacts__form-formfield > textarea {
+  height: 100%;
+}
+
+.contacts__form-formfield > input::-moz-placeholder, textarea::-moz-placeholder {
+  color: #000;
+  font-size: 20px;
+}
+
+.contacts__form-formfield > input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  color: #000;
+  font-size: 20px;
+}
+
+.contacts__form-formfield > input::placeholder, textarea::placeholder {
+  color: #000;
+  font-size: 20px;
+}
+
+.contacts__form-formfield > input:focus, textarea:focus + .contacts__form-formfield {
+  border-bottom: 1px solid #007B25;
+}
+
+.contacts__form-formfield > input:focus, textarea:focus {
+  outline: none;
+}
+
+.contacts__form-message {
+  height: 100px;
+}
+
+.contacts__form-consent > label {
+  display: flex;
+  align-items: center;
+}
+
+.contacts__form-consent > label::before {
+  content: "";
+  display: inline-block;
+  min-width: 30px;
+  min-height: 30px;
+  margin-right: 12px;
+  border: 1px solid #000000;
+  cursor: pointer;
+}
+
+.contacts__form-button {
+  margin-top: 41px;
 }/*# sourceMappingURL=contacts.css.map */
