--- a/css/footer.css
+++ b/css/footer.css
@@ -1,22 +1,40 @@
-.footer-conteiner {
+.footer__conteiner {
   padding-top: 21.5px;
   padding-bottom: 114px;
   border-top: 1px solid #000000;
 }
 
+@media screen and (max-width: 767px) {
+  .footer__conteiner {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__conteiner {
+    padding-top: 21.5px;
+    padding-bottom: 114px;
+    border-top: 1px solid #000000;
+  }
+}
 .contacts-list {
-  margin-top: 52px;
-  padding-bottom: 33px;
+  margin-top: 40px;
+  padding-bottom: 23px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
+@media screen and (min-width: 768px) {
+  .contacts-list {
+    margin-top: 52px;
+    padding-bottom: 33px;
+  }
+}
 .contakts-item {
   margin-bottom: 24px;
   font-size: 16px;
   font-weight: 400;
 }
 
-.contacts-kind {
+.footer__contacts-kind {
   margin-bottom: 8px;
   font-size: 20px;
   font-weight: 400;
