--- a/css/projectsCard.css
+++ b/css/projectsCard.css
@@ -13,14 +13,25 @@
   padding-top: 130px;
 }
 
+@media screen and (max-width: 767px) {
+  .project__card-title {
+    font-size: 40px;
+    line-height: 0.95;
+  }
+}
 .options {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 1fr);
   margin-top: 23px;
-  row-gap: 20px;
 }
 
+@media screen and (min-width: 768px) {
+  .options {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    margin-top: 23px;
+    row-gap: 20px;
+  }
+}
 .price {
   font-size: 24px;
 }
@@ -32,34 +43,83 @@
 }
 
 .options-list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-area: 3/1/3/3;
-  -moz-column-gap: 60px;
-       column-gap: 60px;
-  row-gap: 60px;
-  padding: 26px 29px;
-  background-color: #FED6B8;
+  padding: 31px 25px;
+  background-color: #fed6b8;
   border-radius: 20px;
-  position: absolute;
-  width: 100%;
-  top: -11%;
-  right: -2%;
 }
 
+@media screen and (max-width: 767px) {
+  .price {
+    margin-bottom: 13px;
+    font-size: 20px;
+    line-height: 1.36;
+  }
+  .options-paragraph {
+    margin-bottom: 0;
+    padding-bottom: 176px;
+  }
+  .options-list {
+    margin-top: -33.3%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .options-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-area: 3/1/3/3;
+    -moz-column-gap: 60px;
+         column-gap: 60px;
+    row-gap: 60px;
+    padding: 26px 29px;
+    position: absolute;
+    width: 100%;
+    top: -11%;
+    right: -2%;
+  }
+}
 .table-items {
   align-self: center;
 }
 
+@media screen and (max-width: 767px) {
+  .table-items {
+    display: flex;
+  }
+  .table-items:not(:last-child) {
+    margin-bottom: 36px;
+  }
+  .options-category {
+    margin-left: 19px;
+    width: 200px;
+  }
+  .options-title {
+    font-size: 14px;
+    line-height: 1.05;
+  }
+  .options-text {
+    margin-top: 8px;
+    font-size: 20px;
+    line-height: 1.12;
+  }
+  .options-svg {
+    width: 80px;
+    height: 80px;
+    text-align: center;
+  }
+}
 .description {
   position: relative;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  padding-top: 150px;
   padding-bottom: 80px;
 }
 
+@media screen and (min-width: 768px) {
+  .description {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 150px;
+  }
+}
 .description-block {
   grid-area: 1/2/2/3;
 }
@@ -96,7 +156,7 @@
 .project-contact {
   padding: 24px;
   margin-top: 53px;
-  background-color: #FED6B8;
+  background-color: #fed6b8;
   border-radius: 12px;
   font-size: 16px;
   font-weight: 400;
