--- a/sass/projectsPage/projectsCard.scss
+++ b/sass/projectsPage/projectsCard.scss
@@ -1,42 +1,80 @@
-.options-conteiner{
-    padding-top: 130px;
-    background-color: #fff;
-    width: 100%;
+.options-conteiner {
+  padding-top: 130px;
+  background-color: #fff;
+  width: 100%;
 }
 
 @media screen and (max-width: 767px) {
-    .options-conteiner{
-        padding-top: 0;
-    }
+  .options-conteiner {
+    padding-top: 0;
+  }
 }
 
-.carousel{
-    padding-top: 130px;
+.carousel {
+  padding-top: 130px;
 }
 
+@media screen and (max-width: 767px) {
+  .project__card-title {
+    font-size: 40px;
+    line-height: 0.95;
+  }
+}
 .options {
-
+  margin-top: 23px;
+}
+@media screen and (min-width: 768px) {
+  .options {
     display: grid;
-
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
 
     margin-top: 23px;
     row-gap: 20px;
+  }
 }
 
-.price{
-    font-size: 24px;
-}
-.options-paragraph{
-    margin-bottom: 46px;
-    grid-area: 2/2/4/2;
-
-    font-size: 32px;
-
+.price {
+  font-size: 24px;
 }
 
-.options-list{
+
+.options-paragraph {
+  margin-bottom: 46px;
+  grid-area: 2/2/4/2;
+
+  font-size: 32px;
+}
+
+
+
+.options-list {
+  padding: 31px 25px;
+
+  background-color: #fed6b8;
+  border-radius: 20px;
+}
+
+@media screen and (max-width: 767px) {
+    .price {
+      margin-bottom: 13px;
+  
+      font-size: 20px;
+      line-height: 1.36;
+    }
+  
+    .options-paragraph {
+      margin-bottom: 0;
+      padding-bottom: 176px;
+    }
+
+    .options-list{
+        margin-top: -33.3%;
+    }
+  }
+
+@media screen and (min-width: 768px) {
+  .options-list {
     display: grid;
 
     grid-template-columns: repeat(3, 1fr);
@@ -48,91 +86,132 @@
     row-gap: 60px;
 
     padding: 26px 29px;
-    background-color: #FED6B8;
-    border-radius: 20px;
+    
+    
 
     position: absolute;
     width: 100%;
     top: -11%;
     right: -2%;
+  }
 }
 
-.table-items{
-    align-self: center;
+.table-items {
+  align-self: center;
 }
 
-.description{
-    position: relative;
-    display: grid;
+@media screen and (max-width: 767px) {
+    .table-items {
+        display: flex;
+    }
 
-    grid-template-columns: repeat(2, 1fr);
+    .table-items:not(:last-child){
+        margin-bottom: 36px;
+    }
 
-    padding-top: 150px;
-    padding-bottom: 80px;
+    .options-category{
+        margin-left: 19px;
+        width: 200px;
+    }
+
+    .options-title{
+        font-size: 14px;
+        line-height: 1.05;
+    }
+
+    .options-text{
+        margin-top: 8px;
+        font-size: 20px;
+        line-height: 1.12;
+    }
+
+    .options-svg{
+        width: 80px;
+        height: 80px;
+
+        text-align: center;
+    }
 }
 
-.description-block{
-    grid-area: 1/2/2/3;
+.description {
+  position: relative;
+  padding-bottom: 80px;
 }
 
-.description-title{
-    margin-bottom: 29px;
+@media screen and (min-width: 768px) {
+    .description {
 
-    font-size: 36px;
-    font-weight: 900;
+        display: grid;
+      
+        grid-template-columns: repeat(2, 1fr);
+
+        padding-top: 150px;
+
+      }
 }
 
-.description-text{
-    margin-bottom: 29px;
-
-    font-size: 20px;
-    font-weight: 400;
+.description-block {
+  grid-area: 1/2/2/3;
 }
 
-.description-button{
-    display: block;
-    margin: auto;
-    width: 100%;
-    padding: 12px;
-  
-    border: 2px solid #087313;
-    border-radius: 60px;
-    background-color: inherit;
-  
-    font-size: 24px;
-    font-weight: 400;
-    cursor: pointer;
+.description-title {
+  margin-bottom: 29px;
+
+  font-size: 36px;
+  font-weight: 900;
 }
 
-.buttons-item:not(:last-child){
-    margin-bottom: 8px;
-}
-.project-contact{
-    padding: 24px;
-    margin-top: 53px;
+.description-text {
+  margin-bottom: 29px;
 
-    background-color: #FED6B8;
-    border-radius: 12px;
-
-    font-size: 16px;
-    font-weight: 400;
-
-    text-align: center;
+  font-size: 20px;
+  font-weight: 400;
 }
 
-.contacts-title{
-    margin-bottom: 29px;
-    font-size: 36px;
-    font-weight: 900;
+.description-button {
+  display: block;
+  margin: auto;
+  width: 100%;
+  padding: 12px;
+
+  border: 2px solid #087313;
+  border-radius: 60px;
+  background-color: inherit;
+
+  font-size: 24px;
+  font-weight: 400;
+  cursor: pointer;
 }
 
-.contact-name{
-    margin-bottom: 16px;
+.buttons-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+.project-contact {
+  padding: 24px;
+  margin-top: 53px;
 
-    font-size: 20px;
-    font-weight: 400;
+  background-color: #fed6b8;
+  border-radius: 12px;
+
+  font-size: 16px;
+  font-weight: 400;
+
+  text-align: center;
 }
 
-.contacts-item{
-    margin-bottom: 8px
+.contacts-title {
+  margin-bottom: 29px;
+  font-size: 36px;
+  font-weight: 900;
+}
+
+.contact-name {
+  margin-bottom: 16px;
+
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.contacts-item {
+  margin-bottom: 8px;
 }
