--- a/css/main.css
+++ b/css/main.css
@@ -255,7 +255,7 @@ body {
   color: #087313;
   position: absolute;
   left: 0;
-  top: 120%;
+  top: 100%;
   transition: transform 100ms linear;
 }
 
@@ -273,7 +273,7 @@ body {
   color: #087313;
   position: absolute;
   left: 0;
-  top: 120%;
+  top: 100%;
   transition: transform 100ms linear;
 }
 
@@ -291,7 +291,7 @@ body {
   color: #087313;
   position: absolute;
   left: 0;
-  top: 120%;
+  top: 100%;
   transition: transform 100ms linear;
 }
 
@@ -309,7 +309,7 @@ body {
   color: #087313;
   position: absolute;
   left: 0;
-  top: 120%;
+  top: 100%;
   transition: transform 100ms linear;
 }
 
@@ -1154,43 +1154,39 @@ body {
 }
 
 .contacts__form-formfield {
+  position: relative;
   margin-bottom: 35px;
-  height: 50px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .contacts__form-formfield > input, textarea {
   width: 100%;
-  height: 100%;
+  height: 50px;
   background-color: inherit;
   border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  transition: border-bottom 100ms linear;
+}
+
+.contacts__form-formfield > input:hover, textarea:hover {
+  border-bottom: 1px solid rgb(0, 123, 37);
+}
+
+.contacts__form-formfield > input:focus, textarea:focus {
+  outline: none;
+  border-bottom: 2px solid rgb(0, 123, 37);
+}
+
+.contacts__form-formfield > label {
+  position: absolute;
+  top: 25%;
 }
 
 .contacts__form-formfield > textarea {
   height: 100%;
 }
 
-.contacts__form-formfield > input::-moz-placeholder, textarea::-moz-placeholder {
-  color: #000;
-  font-size: 20px;
-}
-
-.contacts__form-formfield > input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  color: #000;
-  font-size: 20px;
-}
-
-.contacts__form-formfield > input::placeholder, textarea::placeholder {
-  color: #000;
-  font-size: 20px;
-}
-
-.contacts__form-formfield > input:focus, textarea:focus + .contacts__form-formfield {
-  border-bottom: 1px solid #007B25;
-}
-
-.contacts__form-formfield > input:focus, textarea:focus {
-  outline: none;
+.contacts__form-formfield:hover label {
+  font-size: 13px;
 }
 
 .contacts__form-message {
